--- a/unit4/css/style.css
+++ b/unit4/css/style.css
@@ -2,12 +2,23 @@
 
 
 
-h1 {
+#firstname {
 	font-family: 'Open Sans', sans-serif;
 	color: #000000; 
 	text-align: center;
-	font-size: 5em;
-	font-weight: bold;
+	font-size: 3em;
+	font-weight: lighter;
+	letter-spacing: 0.4em;
+	line-height: 0.15em;
+
+}
+
+#lastname {
+	font-family: 'Open Sans', sans-serif;
+	color: #000000; 
+	text-align: center;
+	font-size: 3em;
+	font-weight: black;
 	letter-spacing: 0.4em;
 	line-height: 0.15em;
 
@@ -42,7 +53,7 @@ body {
 
 #slogan {
 	font-family: 'Open Sans', sans-serif;
-	font-weight: lighter;
+	font-weight: normal;
 	letter-spacing: 0.15em;
 	background-color: white;
 	text-align: center;
